Multiple locations finder

--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
 * imports checker
 * hints to ignore lint errors/warnings
-* goto import declaration remote method
+* usage graph
+
+Bugs:
+
+invalid kwargs declared_at
+class declaration with decorators
