Return full node for marked attribute

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+* find location should traverse only one level deep for all names except imports
 * usage graph
 * imports checker
 * hints to ignore lint errors/warnings
